--- a/index.html
+++ b/index.html
@@ -13,27 +13,10 @@
             <h2><span>FEMININO |</span> HORÁRIO DE BRASÍLIA</h2>
         </header>
         <main id="containerGames">
-            <div class="games">  
-                <p>16/9 - 4H</p>
-                <p>BRASIL X ARGENTINA</p>
-            </div>
-            <div class="games">  
-                <p>16/9 - 4H</p>
-                <p>BRASIL X ARGENTINA</p>
-            </div>
-            <div class="games">  
-                <p>16/9 - 4H</p>
-                <p>BRASIL X ARGENTINA</p>
-            </div>
-            <div class="games">  
-                <p>16/9 - 4H</p>
-                <p>BRASIL X ARGENTINA</p>
-            </div>
-            <div class="games">  
-                <p>16/9 - 4H</p>
-                <p>BRASIL X ARGENTINA</p>
-            </div>
+
         </main>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
