--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Pré-Olímpico</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <title>Pré-Olímpico Feminino</title>
 </head>
 <body>
     <div id="app">
         <header>
+            <img src="assets/event-icon.png" alt="">
             <h1>PRÉ-OLÍMPICO</h1>
             <h2><span>FEMININO |</span> HORÁRIO DE BRASÍLIA</h2>
         </header>
